<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/step_counter_background">

    <Button
        android:id="@+id/sensorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/fredoka"
        android:text="@string/sensor_detector"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/circularProgressBar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        app:cpb_background_progressbar_color="#FF5722"
        app:cpb_background_progressbar_width="5dp"
        app:cpb_progress_direction="to_right"
        app:cpb_progressbar_color="@color/mainApplicationColor"
        app:cpb_progressbar_width="10dp"
        app:cpb_round_border="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensorButton" />

    <TextView
        android:id="@+id/stepsTaken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fredoka"
        android:gravity="center"
        android:text="@string/step_count"
        android:textAlignment="center"
        android:textColor="@color/mainApplicationColor"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/circularProgressBar"
        app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
        app:layout_constraintStart_toStartOf="@+id/circularProgressBar"
        app:layout_constraintTop_toTopOf="@+id/circularProgressBar" />

    <TextView
        android:id="@+id/totalMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fredoka"
        android:gravity="center"
        android:text="@string/steps"
        android:textAlignment="center"
        android:textColor="@color/mainApplicationColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/circularProgressBar"
        app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
        app:layout_constraintStart_toStartOf="@+id/circularProgressBar"
        app:layout_constraintTop_toBottomOf="@+id/stepsTaken" />

    <TextView
        android:id="@+id/calorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/fredoka"
        android:text="@string/calories_burned"
        android:textColor="@color/mainApplicationColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circularProgressBar" />

    <TextView
        android:id="@+id/calorie_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/fredoka"
        android:text="@string/calorie_count"
        android:textColor="@color/mainApplicationColor"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/calorie"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/calorie"
        app:layout_constraintTop_toTopOf="@+id/calorie" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/fredoka"
        android:text="@string/distance_walked"
        android:textColor="@color/mainApplicationColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calorie" />

    <TextView
        android:id="@+id/distance_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/fredoka"
        android:text="@string/distance_count"
        android:textColor="@color/mainApplicationColor"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/distance"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toEndOf="@+id/distance"
        app:layout_constraintTop_toTopOf="@+id/distance" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:fontFamily="@font/fredoka"
        android:text="@string/kcal"
        android:textColor="@color/mainApplicationColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/calorie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/calorie" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:fontFamily="@font/fredoka"
        android:text="@string/km"
        android:textColor="@color/mainApplicationColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/distance" />

</androidx.constraintlayout.widget.ConstraintLayout>