<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainApplicationColor">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/fredoka"
        android:text="@string/hills"
        android:textSize="40sp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/bukit1"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/hike_bar"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka"
            android:text="@string/bukit1"
            android:paddingHorizontal="54dp"
            android:textColor="@color/mainApplicationColor"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bukit2"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/hike_bar"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bukit1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka"
            android:text="@string/bukit2"
            android:paddingHorizontal="64dp"
            android:textColor="@color/mainApplicationColor"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bukit3"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/hike_bar"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bukit2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka"
            android:text="@string/bukit3"
            android:paddingEnd="10dp"
            android:textColor="@color/mainApplicationColor"
            android:textSize="30sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>